--- a/nodeProj/blogExpress/views/index.jade
+++ b/nodeProj/blogExpress/views/index.jade
@@ -1,2 +1,12 @@
-h1 Hello World
-p= msg
+Body
+  div
+    h1 Clark's Blog
+    p This is how things are working. Blah blah blah.
+  div
+    footer contact info and other links here
+
+//- locals below
+//- { 
+//-   title: "Clark's Blog",
+//-   body: "This is how my life in tech is. Blah blah blah."
+//- }
