--- a/nodeProj/blogExpress/views/index.jade
+++ b/nodeProj/blogExpress/views/index.jade
@@ -1,12 +1,6 @@
 Body
-  div(id="content", class="main")
+  div#content
     h1 Clark's Blog
     p This is how things are working. Blah blah blah.
   div
     footer contact info and other links here
-
-//- locals below
-//- { 
-//-   title: "Clark's Blog",
-//-   body: "This is how my life in tech is. Blah blah blah."
-//- }
