--- a/nodePlay/todo/views/index.jade
+++ b/nodePlay/todo/views/index.jade
@@ -2,3 +2,8 @@ extends layout
 
 block content
   p List all todos here
+  ol 
+    each val in todos
+      li Name: #{val.name}
+      |  Description: #{val.description}
+      |  Completed?: #{val.completed}
