--- a/nodePlay/todo_example_2/views/index.jade
+++ b/nodePlay/todo_example_2/views/index.jade
@@ -17,6 +17,6 @@ block content
           input(type="text", name="arms")
       div.input
           span.label How do they smell?
-          input(type="text", name="description")
+          input(type="text", name="smells")
       div.actions
           input(type="submit", value="add")
