can link directly to the owner

--- a/nodePlay/todo_example_2/views/index.jade
+++ b/nodePlay/todo_example_2/views/index.jade
@@ -5,7 +5,7 @@ block content
   ol
     each val in owners
       p
-      li Name: #{val.name}
+      li Name: #[a(href='/#{val.id}') #{val.name}]
       | Smells: #{val.smells}
   h1 New Owner?
   form(name="add-estimation", method="post")
