--- a/nodePlay/todo_example_2/views/owner.jade
+++ b/nodePlay/todo_example_2/views/owner.jade
@@ -8,3 +8,5 @@ block content
         |It can dance
       else
         |It cannot dance
+      form(method='POST', action='/#{val.id}?_method=DELETE')
+        button(type='submit') Delete
