--- a/nodePlay/todo_example_2/views/owner.jade
+++ b/nodePlay/todo_example_2/views/owner.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  ol #{owner.name}'s, who has #{owner.arms} arm(s), Turtles
+  ol The turtles of #{owner.name}, who has #{owner.arms} arm(s).
     each val, index in owner.turtles
       li #{val.name}
       //- TODO, be able to click on a turtle as a link
@@ -10,5 +10,15 @@ block content
       else
         |It cannot dance
       //- TODO, delete turtles button here
-  form(action='/update/#{owner.id}', method='POST')
-    button(type='submit').
+  form(name="add-owner", method="POST")
+    div.input
+        span.label Name
+        input(type="text", name="name")
+    div.input
+        span.label Number of Arms?
+        input(type="text", name="arms")
+    div.input
+        span.label How do they smell?
+        input(type="text", name="smells")
+    div.actions
+        input(type="submit", value="add")
