--- a/timer/views/index.jade
+++ b/timer/views/index.jade
@@ -4,7 +4,7 @@ html
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
     script(src='/scripts/main.js', type='text/javascript')
     link(rel='stylesheet', type='text/css', href='styles/style.css')
-    title Terrible Timer
+    title= Title
   body
     .timer
       p#minute 25
