--- a/timer/views/layout.jade
+++ b/timer/views/layout.jade
@@ -1,9 +1,10 @@
 doctype html
 html
   head
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
     link(rel='stylesheet', type='text/css', href='styles/style.css')
-    script(src='/scripts/main.js', type='text/javascript')
     title= Title
   body
     block content
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
+    script(src='/scripts/main.js', type='text/javascript')
+    script(src='/scripts/vendor/jquery.knob.js')
