--- a/timer/views/index.jade
+++ b/timer/views/index.jade
@@ -4,6 +4,13 @@ head
   title= title
 
 block content
+  .input.knob.second(
+                     data-width="150"
+                     data-height="150"
+                     data-cursor=true
+                     data-thickness=.2
+                     data-fgColor="#3AFF30"
+                    )
   .timer
     p#minute 25
     p :
@@ -13,3 +20,4 @@ block content
   button#takeMinute Less Time
   button#stop Stop
   button#reset Reset
+
