playing with the timer

--- a/timer/views/index.jade
+++ b/timer/views/index.jade
@@ -1,16 +1,8 @@
 extends layout
 
-head
-  title= title
-
 block content
-  .input.knob.second(
-                     data-width="150"
-                     data-height="150"
-                     data-cursor=true
-                     data-thickness=.2
-                     data-fgColor="#3AFF30"
-                    )
+  .input.knob.second
+  .input.knob.minute
   .timer
     p#minute 25
     p :
