--- a/timer/views/layout.jade
+++ b/timer/views/layout.jade
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    title= title
     link(rel='stylesheet', type='text/css', href='styles/style.css')
   body
     block content
