oh yeah! -gonna combine those clocks, morty

--- a/timer/public/styles/style.css
+++ b/timer/public/styles/style.css
@@ -1,3 +1,15 @@
 p {
   display: inline;
 }
+
+.knob {
+  display: inline-block;
+}
+
+.second {
+  position:absolute;
+}
+
+.minute {
+  position: absolute;
+}
