--- a/timer/views/index.jade
+++ b/timer/views/index.jade
@@ -1,22 +1,16 @@
 extends layout
 
 block content
-  .input.knob.second
-  .input.knob.minute
-  .timer
-    p#minute 25
-    p :
-    p#second 00
+  .knob
+    .input.second
+    .input.minute
+    .timer
+  br
+  p#minute 25
+  p :
+  p#second 00
   button#start Start
   button#addMinute More Time
   button#takeMinute Less Time
   button#stop Stop
   button#reset Reset
-  p × Superpose (clock)
-    div(style='position:relative;width:350px;margin:auto')
-      div(style='position:absolute;left:10px;top:10px')
-        input.knob.bacon(data-min='0', data-max='24', data-bgcolor='#333', data-fgcolor='#ffec03', data-displayinput='false', data-width='300', data-height='300', data-thickness='.3')
-      div(style='position:absolute;left:60px;top:60px')
-        input.knob.fakon(data-min='0', data-max='60', data-bgcolor='#333', data-displayinput='false', data-width='200', data-height='200', data-thickness='.45')
-      div(style='position:absolute;left:110px;top:110px')
-        input.knob.shakon(data-min='0', data-max='60', data-bgcolor='#333', data-fgcolor='rgb(127, 255, 0)', data-displayinput='false', data-width='100', data-height='100', data-thickness='.3')
