--- a/timer/views/index.jade
+++ b/timer/views/index.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block content
-  div(style='position:relative;width:350px;margin:auto')
-    div(style='position:absolute;left:60px;top:60px')
-      input.knob.minute(data-min='0', data-max='60', data-bgcolor='#333', data-displayinput='false', data-width='200', data-height='200', data-thickness='.45')
-    div(style='position:absolute;left:110px;top:110px')
-      input.knob.second(data-min='0', data-max='60', data-bgcolor='#333', data-fgcolor='rgb(127, 255, 0)', data-displayinput='false', data-width='100', data-height='100', data-thickness='.3')
+  .knobBox
+    .secondBox
+      input.knob.second(data-min='0', data-max='60', data-bgcolor='#333', data-displayinput='false', data-width='200', data-height='200', data-thickness='.45')
+    .minuteBox
+      input.knob.minute(data-min='0', data-max='60', data-bgcolor='#333', data-fgcolor='rgb(127, 255, 0)', data-displayinput='false', data-width='100', data-height='100', data-thickness='.3')
   
   .timer
     p#minute 25
