--- a/timer/views/index.jade
+++ b/timer/views/index.jade
@@ -2,18 +2,16 @@ extends layout
 
 block content
   .knobBox
+    .centerBox
+      p#minute 30
     .secondBox
       input.knob.second(data-min='0', data-max='60', data-bgcolor='#333', data-displayinput='false', data-width='200', data-height='200', data-thickness='.45')
     .minuteBox
       input.knob.minute(data-min='0', data-max='60', data-bgcolor='#333', data-fgcolor='rgb(127, 255, 0)', data-displayinput='false', data-width='100', data-height='100', data-thickness='.3')
   
   .timer
-    p#minute 25
-    p :
-    p#second 00
   button#start Start
   button#addMinute More Time
   button#takeMinute Less Time
   button#stop Stop
   button#reset Reset
-
