play button is working. -timer will stop on reset -play button bug found -will speed up and can't stop different timer intervals

--- a/timer/views/index.jade
+++ b/timer/views/index.jade
@@ -9,9 +9,9 @@ block content
     .circle
     .centerBox
       p#minute 30
+  .start#start
   
   .timer
-  button#start Start
   button#addMinute More Time
   button#takeMinute Less Time
   button#stop Stop
