--- a/timer/public/styles/style.css
+++ b/timer/public/styles/style.css
@@ -36,13 +36,13 @@ p {
   height: 5.5em; 
   background-color: yellow;
 }
+
+.start{
+  margin: auto;
+  width: 0; 
+  height: 0; 
+  border-top: 1em solid transparent;
+  border-bottom: 1em solid transparent; 
+  border-left: 2em solid red; 
 }
-/*p × Superpose (clock)
-    div(style='position:relative;width:350px;margin:auto')
-      div(style='position:absolute;left:10px;top:10px')
-        input.knob.hour(data-min='0', data-max='24', data-bgcolor='#333', data-fgcolor='#ffec03', data-displayinput='false', data-width='300', data-height='300', data-thickness='.3')
-      div(style='position:absolute;left:60px;top:60px')
-        input.knob.minute(data-min='0', data-max='60', data-bgcolor='#333', data-displayinput='false', data-width='200', data-height='200', data-thickness='.45')
-      div(style='position:absolute;left:110px;top:110px')
-        input.knob.second(data-min='0', data-max='60', data-bgcolor='#333', data-fgcolor='rgb(127, 255, 0)', data-displayinput='false', data-width='100', data-height='100', data-thickness='.3')
-*/
+}
