--- a/timer/public/styles/style.css
+++ b/timer/public/styles/style.css
@@ -37,7 +37,7 @@ p {
   background-color: yellow;
 }
 
-.start{
+.play{
   margin: auto;
   width: 0; 
   height: 0; 
@@ -45,3 +45,12 @@ p {
   border-bottom: 1em solid transparent; 
   border-left: 2em solid red; 
 }
+
+/*.pause {
+  margin: auto;
+  width: 0; 
+  height: 0; 
+  border-top: 1em solid transparent;
+  border-bottom: 1em solid transparent; 
+  border-left: 2em solid blue; 
+}*/
