--- a/timer/views/index.jade
+++ b/timer/views/index.jade
@@ -25,7 +25,7 @@ block content
     .circle
     .centerBox
       p#minute 30
-  .action.start
+  .action.play
   
   .timer
   button#addMinute More Time
