--- a/timer/public/styles/style.css
+++ b/timer/public/styles/style.css
@@ -46,11 +46,11 @@ p {
   border-left: 2em solid red; 
 }
 
-/*.pause {
+.pause {
   margin: auto;
   width: 0; 
   height: 0; 
   border-top: 1em solid transparent;
   border-bottom: 1em solid transparent; 
   border-left: 2em solid blue; 
-}*/
+}
