--- a/timer/views/layout.jade
+++ b/timer/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', type='text/css', href='styles/style.css')
+    link(rel='stylesheet', type='text/css', href='styles/main.css')
   body
     block content
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
