Got the minute taking icon made and working -Just need the reset button made -then do font -then do positioning -then do coloring

--- a/timer/views/index.jade
+++ b/timer/views/index.jade
@@ -27,7 +27,6 @@ block content
       p#minute 30
   .action.play
   .addMinute
+  .takeMinute
   
-  .timer
-  button#takeMinute Less Time
   button#reset Reset
