--- a/timer/views/index.jade
+++ b/timer/views/index.jade
@@ -7,7 +7,8 @@ block content
       input.knob.second(
                         data-min='0', 
                         data-max='60', 
-                        data-bgcolor='#333', 
+                        data-bgcolor='#0C141F', 
+                        data-fgcolor='#6FC3DF', 
                         data-displayinput='false', 
                         data-width='200', 
                         data-height='200', 
@@ -17,13 +18,12 @@ block content
       input.knob.minute(
                         data-min='0',
                         data-max='60', 
-                        data-bgcolor='#333', 
-                        data-fgcolor='rgb(127, 255, 0)', 
+                        data-bgcolor='#0C141F', 
+                        data-fgcolor='#E6FFFF', 
                         data-displayinput='false', 
                         data-width='100', 
                         data-height='100', 
                         data-thickness='.3')
-    .circle
     .centerBox
       p#minute 30
   .buttonBox
