--- a/timer/views/layout.jade
+++ b/timer/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    link(rel="icon", type="image/png", href="images/favicon.ico")
     link(rel='stylesheet', type='text/css', href='styles/main.css')
   body
     block content
